postcss/tests/testData/inspections/customMedia/emptyCustomMediaName.pcss
@custom-media <error descr="Custom media name should not be empty">--</error> screen and (height >= 100px);